--- a/config/database.yml
+++ b/config/database.yml
@@ -38,7 +38,7 @@ production:
   database: Makaton_production
   pool: 5
   username: root
-  password:
+  password: fortonos
   socket: /var/lib/mysql/mysql.sock
   
   
