--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ development:
   database: Makaton_development
   pool: 5
   username: root
-  password:
+  password: fortonos
   socket: /var/lib/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -28,7 +28,7 @@ test:
   database: Makaton_test
   pool: 5
   username: root
-  password:
+  password: fortonos
   socket: /var/lib/mysql/mysql.sock
 
 production:
@@ -42,10 +42,3 @@ production:
   socket: /var/lib/mysql/mysql.sock
   
   
-proxied-appfog:
-  adapter: mysql2
-  database: df999c725ad4f4e25bf5b266b6984ff55
-  username: u5NvnGYfsHUGD
-  password: pZmadvOjca2zm
-  port     : 10000
-  host     : 127.0.0.1
